Make sure menu is under header on mobile

--- a/src/css/default.styl
+++ b/src/css/default.styl
@@ -234,6 +234,7 @@ a.button.github:hover {
 @media (max-device-width: 767px) {
   #header {
     shadow: 5px;
+    z-index: 10000;
   }
 
   div#logo {
@@ -285,7 +286,7 @@ a.button.github:hover {
     -o-transform: translateX(-100%);
     -ms-transform: translateX(-100%);
     transform: translateX(-100%);
-    z-index: 10000;
+    z-index: 1000;
   }
 
   #navigation nav {
